--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ jobs:
 install:
   - git clone https://github.com/spack/spack.git
   - . spack/share/spack/setup-env.sh
-  - spack install glib
+  - travis_wait 30 spack install glib
 
